<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.kohang</groupId>
	<artifactId>fsi251-notifier</artifactId>
	<version>2.0.0</version>
	<name>FSI251 Notifier</name>
	<description>Send Reminder for Renewal</description>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mockito.version>5.14.2</mockito.version>
		<netty.version>4.1.130.Final</netty.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-bom</artifactId>
				<version>${netty.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.azure</groupId>
				<artifactId>azure-sdk-bom</artifactId>
				<version>1.3.4</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>3.4.6</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Azure -->
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-ai-formrecognizer</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-storage-blob</artifactId>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-storage-file-share</artifactId>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-identity</artifactId>
		</dependency>
		<dependency>
			<!-- Include the sdk as a dependency -->
			<groupId>com.microsoft.graph</groupId>
			<artifactId>microsoft-graph</artifactId>
			<version>5.16.0</version>
		</dependency>
		<!-- Java -->
		<dependency>
			<groupId>jakarta.mail</groupId>
			<artifactId>jakarta.mail-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.angus</groupId>
			<artifactId>angus-mail</artifactId>
		</dependency>
		<!--PdfBox-->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>2.0.35</version>
		</dependency>
		<!--lombok-->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>${project.basedir}/.test-env</file>
							</files>
							<quiet>true</quiet>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.42</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>3.4.6</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<argLine>
         				-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
        			</argLine>
					<includes>
						<include>**/*UnitTest.java</include>
					</includes>
					<excludes>
						<excludes>**/*IntegrationTest.java</excludes>
					</excludes>
					<systemPropertyVariables>
						<azure.storage>${azure_storage}</azure.storage>
						<azure.client.id>${azure_client_id}</azure.client.id>
						<azure.client.secret>${azure_client_secret}</azure.client.secret>
						<azure.tenant.id>${azure_tenant_id}</azure.tenant.id>
						<azure.recognition.endpoint>${azure_recognition_endpoint}</azure.recognition.endpoint>
						<azure.recognition.key>${azure_recognition_key}</azure.recognition.key>
						<onedrive.share.url>${onedrive_share_url}</onedrive.share.url>
						<db.user>${db_user}</db.user>
						<db.password>${db_password}</db.password>
						<db.host>${db_host}</db.host>
						<email.username>${email_username}</email.username>
						<email.password>${email_password}</email.password>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.5.4</version>
				<executions>
          			<execution>
            			<goals>
              				<goal>integration-test</goal>
              				<goal>verify</goal>
            			</goals>
          			</execution>
        		</executions>
        		<configuration>
					<argLine>
          				-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
        			</argLine>
					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
					<includes>
						<include>**/*IntegrationTest.java</include>
					</includes>
					<excludes>
						<excludes>**/*UnitTest.java</excludes>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.48.1</version>
				<configuration>
					<dockerHost>${env.docker_host}</dockerHost>
					<certPath>${env.docker_cert_path}</certPath>
					<removeMode>all</removeMode>
					<images>
						<image>
							<alias>mongodb</alias>
							<name>mongo:4.4.12</name>
							<build>
								<skip>true</skip>
								<skipPush>true</skipPush>
							</build>
							<run>
								<env>
									<MONGO_INITDB_ROOT_USERNAME>admin</MONGO_INITDB_ROOT_USERNAME>
									<MONGO_INITDB_ROOT_PASSWORD>password</MONGO_INITDB_ROOT_PASSWORD>
								</env>
								<ports>
									<posts>27017:27017</posts>
								</ports>
								<wait>
									<log>Waiting for connections</log>
									<time>20000</time>
								</wait>
							</run>
						</image>
						<image>
							<name>travisli/${project.artifactId}:${project.version}</name>
							<build>
								<from>eclipse-temurin:17-jdk-jammy</from>
								<tags>
									<tag>latest</tag>
								</tags>
								<assembly>
									<descriptorRef>artifact</descriptorRef>
									<targetDir>/app</targetDir>
								</assembly>
								<entryPoint>
									java -jar \
									-Dazure.client.id="$(cat /run/secrets/azure_client_id)" \
									-Dazure.client.secret="$(cat /run/secrets/azure_client_secret)" \
									-Dazure.tenant.id="$(cat /run/secrets/azure_tenant_id)" \
									-Dazure.recognition.endpoint="$(cat /run/secrets/azure_recognition_endpoint)" \
									-Dazure.recognition.key="$(cat /run/secrets/azure_recognition_key)" \
									-Dazure.storage="$(cat /run/secrets/azure_storage)" \
									-Ddb.user="$(cat /run/secrets/db_user)" \
									-Ddb.password="$(cat /run/secrets/db_password)" \
									-Demail.username="$(cat /run/secrets/email_username)" \
									-Demail.password="$(cat /run/secrets/email_password)" \
									-Dweb.user="$(cat /run/secrets/web_user)" \
									-Dweb.password="$(cat /run/secrets/web_password)" \
									-Donedrive.share.url="$(cat /run/secrets/onedrive_share_url)" \
									-Dweb.password="$(cat /run/secrets/web_password)" \
									/app/${project.artifactId}-${project.version}.jar
								</entryPoint>
							</build>
							<run>
								<skip>true</skip>
							</run>
						</image>
					</images>
				</configuration>
				<executions>
					<execution>
						<id>build docker image</id>
						<phase>package</phase>
						<goals>
							<!-- "build" should be used to create the images with the artifact -->
							<goal>build</goal>
						</goals>
					</execution>
					<execution>
						<id>start docker image</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>start</goal>
						</goals>
					</execution>
					<execution>
						<id>stop docker image</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
						</goals>
					</execution>
					<execution>
						<id>push docker image</id>
						<phase>deploy</phase>
						<goals>
							<goal>remove</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>